# ResourceLibrary.cmake

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  ResourceLibrary.cmake
example/: CMakeLists.txt  example.cpp  example.txt
